--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Megan Le</h1>
-            <p class="title">CS/Bioinformatics PhD Student</p>
+            <h1>Ecem İlgün</h1>
+            <p class="title">CS MSc Student</p>
 
             <nav>
                 <ul>
@@ -110,7 +110,7 @@
         </header>
 
         <main>
-            <p>I am a second-year PhD student at MIT EECS co-advised by Heng Li and Bonnie Berger. My research involves developing computational methods for processing and analyzing biological sequencing data, and my current and past research areas include **genome assembly**, **read alignment**, **structural variation calling**, and **ancient DNA analysis**.</p>
+            <p>I am a third-year MSc student at Bilkent CS advised by Can Alkan. My research involves developing computational methods for processing and analyzing biological sequencing data, and my current and past research areas include **genome assembly**, **read alignment**, **structural variation calling**, and **ancient DNA analysis**.</p>
 
             <p>I was previously at **UT Austin**, where I majored in computer science, math, and English literature and received an MS in computational science (advised by Vagheesh Narasimhan). My other research experience also includes work in physical oceanography (with the UT Computational Research in Ice and Ocean Systems group) and in computational materials (through the UT Freshman Research Initiative).</p>
 
