--- a/cv.html
+++ b/cv.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV – Megan Le</title>
+    <title>CV – Ecem İlgün</title>
     <style>
+        /* CSS remains the same as previous step for visual consistency */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             line-height: 1.6;
@@ -70,7 +71,7 @@
             padding-top: 30px;
             border-top: 1px solid #eee;
             margin-top: 20px;
-            text-align: center; /* Center the download link */
+            text-align: center;
         }
 
         .cv-link {
@@ -94,8 +95,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Megan Le</h1>
-            <p class="title">CS/Bioinformatics PhD Student</p>
+            <h1>Ecem İlgün</h1>
+            <p class="title">MSc Computer Engineering (Bilkent University) / Project Engineer</p>
 
             <nav>
                 <ul>
@@ -109,9 +110,9 @@
 
         <main>
             <h2>Curriculum Vitae</h2>
-            <p>A detailed CV outlining academic achievements, publications, and work experience is available for download below in PDF format.</p>
+            <p>A detailed CV outlining my education, research experience, and publications is available for download below in PDF format.</p>
 
-            <a href="meganle_cv.pdf" class="cv-link" download>Download CV (PDF)</a>
+            <a href="eilgun_cv_11_2025 (1).pdf" class="cv-link" download>Download CV (PDF)</a>
 
             <p style="margin-top: 50px; font-size: 0.9em; color: #777;">*Note: This link will automatically download the file or open it in a new tab, depending on your browser settings.</p>
         </main>
