--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – Megan Le</title>
+    <title>Contact – Ecem İlgün</title>
     <style>
+        /* CSS remains the same as previous step for visual consistency */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             line-height: 1.6;
@@ -93,8 +94,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Megan Le</h1>
-            <p class="title">CS/Bioinformatics PhD Student</p>
+            <h1>Ecem İlgün</h1>
+            <p class="title">MSc Computer Engineering (Bilkent University) / Project Engineer</p>
 
             <nav>
                 <ul>
@@ -108,13 +109,14 @@
 
         <main>
             <h2>Get in Touch</h2>
-            <p>Please feel free to reach out regarding research collaborations, speaking engagements, or graduate school inquiries. I try my best to respond to all correspondence.</p>
+            <p>Please feel free to reach out regarding research collaborations, speaking engagements, or graduate program inquiries.</p>
 
             <ul class="contact-info">
-                <li>**Email:** <a href="mailto:your.email@example.com">your.email@example.com</a> (Please **change this** to your actual email address!)</li>
-                <li>**Office:** MIT Stata Center, Office G450, 32 Vassar St, Cambridge, MA</li>
-                <li>**LinkedIn:** <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></li>
-                <li>**GitHub:** <a href="https://github.com/ecemilgun">github.com/ecemilgun</a></li>
+                [cite_start]<li>**Email:** <a href="mailto:ecem.ilgun@bilkent.edu.tr">ecem.ilgun@bilkent.edu.tr</a> [cite: 4]</li>
+                [cite_start]<li>**Phone:** +(90) 506 932 4225 [cite: 4]</li>
+                [cite_start]<li>**Personal Website (You are here!):** <a href="https://ecemilgun.github.io">ecemilgun.github.io</a> [cite: 4]</li>
+                [cite_start]<li>**GitHub:** <a href="https://github.com/theyusko">github.com/theyusko</a> [cite: 6]</li>
+                [cite_start]<li>**Google Scholar:** <a href="https://scholar.google.com/">Google scholar</a> (Link placeholder) [cite: 4]</li>
             </ul>
         </main>
     </div>
