--- a/contact.html
+++ b/contact.html
@@ -109,14 +109,10 @@
 
         <main>
             <h2>Get in Touch</h2>
-            <p>Please feel free to reach out regarding research collaborations, speaking engagements, or graduate program inquiries.</p>
+            <p>Please feel free to reach out regarding anything research related.</p>
 
             <ul class="contact-info">
-                [cite_start]<li>**Email:** <a href="mailto:ecem.ilgun@bilkent.edu.tr">ecem.ilgun@bilkent.edu.tr</a> [cite: 4]</li>
-                [cite_start]<li>**Phone:** +(90) 506 932 4225 [cite: 4]</li>
-                [cite_start]<li>**Personal Website (You are here!):** <a href="https://ecemilgun.github.io">ecemilgun.github.io</a> [cite: 4]</li>
-                [cite_start]<li>**GitHub:** <a href="https://github.com/theyusko">github.com/theyusko</a> [cite: 6]</li>
-                [cite_start]<li>**Google Scholar:** <a href="https://scholar.google.com/">Google scholar</a> (Link placeholder) [cite: 4]</li>
+                [cite_start]<li><strong>Email:</strong> <a href="mailto:ecem.ilgun@bilkent.edu.tr">ecem.ilgun@bilkent.edu.tr</a></li>
             </ul>
         </main>
     </div>
